2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.setBufferPercent):
	Use correct variable...

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.paint),
	(Status.intersectSeekbar), (Status.mouseMoved):
	Don't allow the user to press play/pause when we are buffering.

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.paint):
	Don't paint the time if the applet is buffering.

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.paint):
	Rearange status area, always show start/stop even if the file is not
	seekable.

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..stop):
	Ignore potential errors in shutdown.

2006-11-02  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..init):
	Some more debug.

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc), (HTTPSrc.Pad),
	(HTTPSrc.openWithConnection), (HTTPSrc.getInputStream),
	(HTTPSrc.getFactoryName):
	Keep track of offset, Don't rely on the server sending EOS.
	close connection on EOS.
	Work around EOS bug in MS JVM with twisted by not reading the last
	byte.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSink.java: (AudioSink.AudioClock),
	(AudioSink.AudioClock.setStarted), (AudioSink.RingBuffer.commit),
	(AudioSink.RingBuffer.setSample), (AudioSink.RingBuffer.pause),
	(AudioSink.RingBuffer.stop):
	Remove the lock of the clock to further avoid deadly embraces.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..getParam),
	(Cortado..getBoolParam), (Cortado.), (Cortado..getDoubleParam),
	(Cortado..getIntParam), (Cortado..shutDown), (Cortado..init):
	Print parameter values and how they are parsed.
	Accept 1 as true for boolean parameters.

2006-11-01  Wim Taymans  <wim@fluendo.com>
